# rotation-averaging

./: CMakeLists.txt  g2o.cpp  package.xml
cmake/: FindG2O.cmake
launch/: ra.launch  ra_g2o.launch
rviz/: ra.rviz
src/: cone_publisher.cpp  cone_publisher.hpp  init.hpp  main.cpp  problem_generator.hpp  publish.cpp  publish.hpp  ra.cpp  ra.hpp  ra_g2o_node.cpp  ra_node.cpp  rotation_averaging.cpp  rotation_averaging.hpp  types.hpp  util.cpp  util.hpp
src/core/: publish.cpp  publish.hpp  types.hpp  util.cpp  util.hpp
src/duality/: rotation_averaging.cpp  rotation_averaging.hpp
src/g2o/: g2o_ra.cpp  g2o_ra.hpp  g2o_types.hpp  so3.cpp  so3.hpp
